source/styleguide/molecules/SgPageShell/SgPageShell.css
.SgPageShell {
  position: absolute;
  width: 100%;
  height: 100%;

  &__header {
    position: sticky;
    top: 0;
    z-index: 1;
  }

  &__body {
    display: flex;
    margin: auto;
    max-width: 1280px;
    position: relative;
  }

  &__main {
    transform: translateX(-100vw);
    transition: transform 0.5s;
    min-width: 100%;

    @media (--sg-small) {
      transform: translateX(calc(-200px));
    }

    @media (--sg-medium) {
      transform: translateX(calc(-300px));
    }
  }

  .SgNavigation {
    padding: 0 1.5em 0 0;
  }

  &__navigation {
    background-color: var(--sg-color-white);
    height: calc(100vh - 70px);
    min-width: 100%;
    opacity: 0;
    overflow-y: auto;
    padding: 2.5em 0.5em 2.5em 2em;
    position: sticky;
    top: 66px;
    transform: translateX(calc(-300px + 2em));
    transition: opacity 0.5s, transform 0.5s, z-index 0.5s;
    z-index: -1;

    @media (--sg-small) {
      min-width: 200px;
      width: 200px;
    }

    @media (--sg-medium) {
      min-width: 300px;
      width: 300px;
    }

    &--scrollbar {
      height: 100%;
      opacity: 0.25;
      right: 0.5em;
      z-index: 2;

      &--thumb {
        background-color: var(--sg-color-gray-darker);
        border-radius: 1rem;
      }
    }
  }

  &--navOpen {
    overflow-x: hidden;

    @media (--sg-small) {
      overflow-x: inherit;
    }

    .SgPageShell__main {
      max-height: calc(100vh - 65px);
      overflow: hidden;
      transform: translateX(0);
      transition: transform 0.5s;

      @media (--sg-small) {
        overflow: inherit;
        max-height: none;
        min-width: calc(100% - 300px);
      }
    }

    .SgPageShell__navigation {
      opacity: 1;
      transform: translateX(0);
      transition: opacity 0.5s, transform 0.5s, z-index 0.5s;
      z-index: 1;
    }
  }
}

